# mlbio-2024

./: .gitignore  Machine-learning-for-health-Classification-d-ECG_sequence.ipynb  pyproject.toml
1_ecg/: Machine-learning-for-health-Classification-d-ECG_sequence.ipynb
2_rdkit/: 2024_Rdkit_II_solubility_prediction.ipynb  2024_ml4mol1_introduction_rdkit.ipynb
3_med_img/: 3. 2024_cell_segmentation.ipynb
4_fed_learning/: local_federated_learning.ipynb
5_ml_genomics/: 4. classify_TF_binding.ipynb
