[project]
name = "ml4bio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.11,>=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pywavelets>=1.7.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tensorflow==2.17",
]
